force-app/main/default/objects/SIS_Issued_accreditation__c/SIS_Issued_accreditation__c.object-meta.xml
<CustomObject>
    <label>Accréditation délivrée</label>
    <nameField>
        <label>Accréditation délivrée</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accréditations délivrées</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>