force-app/main/default/objects/SIS_Issued_accreditation__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <label>Credential</label>
    <referenceTo>hed__Credential__c</referenceTo>
    <relationshipName>Issued_accreditations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>