force-app/main/default/objects/SIS_Issued_accreditation__c/fields/Higher_Education_Institution__c.field-meta.xml
<CustomField>
    <fullName>Higher_Education_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Higher Education Institution</label>
    <referenceTo>SIS_Higher_Education_Institution__c</referenceTo>
    <relationshipName>Issued_accreditations</relationshipName>
    <type>Lookup</type>
</CustomField>