force-app/main/default/objects/SIS_Issued_accreditation__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <formula>TEXT(Credential__r.SIS_Scope__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope</label>
    <type>Text</type>
</CustomField>