force-app/main/default/objects/SIS_Issued_accreditation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Credential__c</columns>
    <columns>Higher_Education_Institution__c</columns>
    <columns>End_Date__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les accréditations délivrées</label>
</ListView>